package lapr.project.model;

public class TrafficManager {
}
