@startuml

class Ship {

    -int MMSI <<b>PK>
    -String name
    -int IMO
    -int numberEnergyGenerator
    -int powerOutput
    -String callSign
    -int vesselType
    -double length
    -double width
    -int maximumCapacity
    -double draft
}

class PositionData{
    -LocalDateTime baseDateTime
    -double latitude
    -double longitude
    -double sog
    -double cog
    -double heading
    -String position
    -String transceiver
}

class TrafficManager{
}

TrafficManager --> Ship
TrafficManager --> PositionData
Ship *-- PositionData

@enduml